--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
         {{ person.name }} - {{ person.born }}
     </p>
 </div>
+  <hr>
+<h2>Directive welcome</h2>
+<welcome></welcome>
 
 </body>
 </html>
