directive welcome - atribute

--- a/index.html
+++ b/index.html
@@ -238,8 +238,11 @@
     </p>
 </div>
   <hr>
-<h2>Directive welcome</h2>
+<h2>Directive welcome</h2> - Element
 <welcome></welcome>
+
+<h2>Directive welcome</h2> - Atribute
+<div welcomea></div>
 
 </body>
 </html>
