Advanced Directive Functionality

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <welcome></welcome>
 
 <h2>Directive welcome</h2> - Atribute
-<div entering leaving style="background-color: darkolivegreen">Hover over me for fun times. huehuehue</div>
+<div entering="activeClass" leaving >Hover over me for fun times. huehuehue</div>
 
 </body>
 </html>
