--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
 <h2>Directive welcome</h2> - Element
 <welcome></welcome>
 
-<h2>Directive welcome</h2> - Atribute
-<div entering="activeClass" leaving >Hover over me for fun times. huehuehue</div>
+<h2>Directive welcome</h2> - Advanced
+<div ng-controller="FunController as fun" entering="fun.start()" leaving="fun.end()">Hover over me for fun times. huehuehue</div>
 
 </body>
 </html>
