--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 </div>
   <hr>
 <h2>Directive welcome</h2> - Element
-<welcome></welcome>
+<welcome hello>Say something</welcome>
 
 <h2>Directive welcome</h2> - Advanced
 <div ng-controller="FunController as fun" entering="fun.start()" leaving="fun.end()">Hover over me for fun times. huehuehue</div>
