--- a/index.html
+++ b/index.html
@@ -238,10 +238,12 @@
     </p>
 </div>
   <hr>
-<h2>Directive welcome</h2> - Element
-<welcome hello>Say something</welcome>
+<h2>Directive welcome  - Element</h2>
+<welcome hello>
+    <button>Click this button</button>
+</welcome>
 
-<h2>Directive welcome</h2> - Advanced
+<h2>Directive welcome  - Advanced</h2>
 <div ng-controller="FunController as fun" entering="fun.start()" leaving="fun.end()">Hover over me for fun times. huehuehue</div>
 
 </body>
