--- a/index.html
+++ b/index.html
@@ -257,14 +257,20 @@
 
   <hr>
 <h2>Thinkster Directive</h2>
-<tab>
-  Lorem ipsum dolor sit amet, ut eam nullam utroque liberavisse, ea
-  graecis tractatos contentiones quo. Ipsum phaedrum scripserit sit id,
-  eu insolens indoctum vel, eos eu offendit delectus tincidunt. Eum
-  nostrum reprehendunt in, ullum nostrud legimus ei quo. Sed et elitr
-  corrumpit. Nibh maiestatis voluptatum has no, at est inermis epicuri,
-  omnis temporibus cu mei. Legere scriptorem voluptatibus et est, ea
-  noluisse deterruisset sea.
-</tab>
+<tabset>
+  <tab>
+    Lorem ipsum dolor sit amet, ut eam nullam utroque liberavisse, ea
+    graecis tractatos contentiones quo. Ipsum phaedrum scripserit sit id,
+    eu insolens indoctum vel, eos eu offendit delectus tincidunt. Eum
+    nostrum reprehendunt in, ullum nostrud legimus ei quo. Sed et elitr
+    corrumpit. Nibh maiestatis voluptatum has no, at est inermis epicuri,
+    omnis temporibus cu mei. Legere scriptorem voluptatibus et est, ea
+    noluisse deterruisset sea.
+  </tab>
+  <tab>
+    Just another tab!
+  </tab>
+</tabset>
+
 </body>
 </html>
