--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   <hr>
 <h2>Thinkster Directive</h2>
 <tabset>
-  <tab>
+  <tab heading="Tab 1">
     Lorem ipsum dolor sit amet, ut eam nullam utroque liberavisse, ea
     graecis tractatos contentiones quo. Ipsum phaedrum scripserit sit id,
     eu insolens indoctum vel, eos eu offendit delectus tincidunt. Eum
@@ -267,7 +267,7 @@
     omnis temporibus cu mei. Legere scriptorem voluptatibus et est, ea
     noluisse deterruisset sea.
   </tab>
-  <tab>
+  <tab heading="tab 2">
     Just another tab!
   </tab>
 </tabset>
