Components and Containers

--- a/index.html
+++ b/index.html
@@ -272,5 +272,17 @@
   </tab>
 </tabset>
 
+
+<h2>Clock - Components and containers</h2>
+<clock timezone="MST"></clock>
+  <panel title="I'm a title">
+    <clock timezone="PST"></clock>
+  </panel>
+  <panel title="I'm a title">
+    <clock timezone="PST"></clock>
+    <clock timezone="PST"></clock>
+    <clock timezone="PST"></clock>
+    <clock timezone="PST"></clock>
+  </panel>
 </body>
 </html>
