--- a/index.html
+++ b/index.html
@@ -284,5 +284,12 @@
     <clock timezone="PST"></clock>
     <clock timezone="PST"></clock>
   </panel>
+
+<h2>Directive comunication</h2>
+<country>
+    <state>
+        <city></city>
+    </state>
+</country>
 </body>
 </html>
