Understanding Isolate Scope

--- a/index.html
+++ b/index.html
@@ -291,5 +291,11 @@
         <city></city>
     </state>
 </country>
+
+  <div ng-controller="ChoreCtrl">
+    <h2>Understanding Isolate Scope</h2>
+    <kid done="logChore(chore)"></kid>
+
+  </div>
 </body>
 </html>
