--- a/index.html
+++ b/index.html
@@ -295,7 +295,12 @@
   <div ng-controller="ChoreCtrl">
     <h2>Understanding Isolate Scope</h2>
     <kid done="logChore(chore)"></kid>
-
   </div>
+
+<div ng-controller="drinkCtrl">
+    <h2>Isolate Scope "@"</h2>
+    <input type="text" ng-model="ctrlFlavor">
+    <div drink flavor="{{ctrlFlavor}}"></div>
+</div>
 </body>
 </html>
