--- a/index.html
+++ b/index.html
@@ -296,11 +296,16 @@
     <h2>Understanding Isolate Scope</h2>
     <kid done="logChore(chore)"></kid>
   </div>
-  
+
 <div ng-controller="drinkCtrl">
     <h2> Isolate Scope "="</h2>
     <input type="text" ng-model="ctrlFlavor"> <!-- Ctrl -->
     <div drink flavor="ctrlFlavor"></div>     <!-- Dir -->
+</div>
+
+<div ng-controller="phoneCtrl">
+    <h2>Isolate Scope "&"</h2>
+    <div phone dial="callHome(message)"></div>
 </div>
 </body>
 </html>
