--- a/index.html
+++ b/index.html
@@ -15,320 +15,6 @@
     <script src="js/filters.js"></script>
 </head>
 <body ng-app="invoice1" >
-  <div ng-controller="InvoiceController as invoice">
-  <b>Invoice:</b>
-  <div>
-    Quantity: <input type="number" min="0" ng-model="invoice.qty">
-  </div>
-  <div>
-    Costs: <input type="number" min="0" ng-model="invoice.cost">
-  </div>
-      <select ng-model="invoice.inCurr">
-          <option ng-repeat="c in invoice.currencies">{{c}}</option>
-      </select>
-      <br>
-      <b>Total:</b>
-  <div ng-repeat="c in invoice.currencies">
-    {{invoice.total(c) | currency:c}}
-  </div>
-      <button class="btn" ng-click="invoice.pay()">Pay</button>
-
-      <h1>Binding</h1>
-      <input type="text" ng-model="invoice.message">
-      <p>{{ invoice.message }}</p>
-      <p>{{ bla }}</p>
-      Two times <input ng-model="num"> equals {{ double(num) }}
-      <hr>
-      <input type="text" ng-model="customSpice">
-      <button ng-click="chiliSpicy()">Chili</button>
-      <button ng-click="customSpicy(customSpice)">Custom</button>
-
-      <p>This food is {{ spice }} spicy!</p>
-  </div>
-
-  <hr>
-
-<div class="spicy">
-  <div ng-controller="MainController">
-    <p>Good {{timeOfDay}}, {{name}}!</p>
-
-    <div ng-controller="ChildController">
-      <p>Good {{timeOfDay}}, {{name}}!</p>
-
-      <div ng-controller="GrandChildController">
-        <p>Good {{timeOfDay}}, {{name}}!</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-  <hr>
-
-<div ng-controller="myServiceController">
-    <input type="text" ng-init="message='test'" ng-model="message">
-    <button ng-click="callNotify(message)">NOTIFY</button>
-    click 3 times do see an alert
-</div>
-<div ng-controller="myNewServiceController">
-    <input type="text" ng-model="item">
-    <button ng-click="add(item)">Add</button>
-    <h1>List:</h1>
-    <ul>
-        <li ng-repeat="i in items">{{i}}</li>
-    </ul>
-</div>
-
-  <hr>
-
-<div ng-controller="ExpressionController" class="expressions">
-  Expression:
-  <input type='text' ng-model="expr" size="80"/>
-  <button ng-click="addExp(expr)">Evaluate</button>
-  <ul>
-   <li ng-repeat="expr in exprs track by $index">
-     [ <a href="" ng-click="removeExp($index)">X</a> ]
-     <code>{{expr}}</code> => <span ng-bind="$parent.$eval(expr)"></span>
-    </li>
-  </ul>
-</div>
-
-  <hr>
-
-<div ng-controller="EventController">
-    <button ng-click="clickMe($event)">Event</button>
-    <p><code>$event</code>: <pre>{{ $event | json }}</pre></p>
-    <p><code>clickEvent</code>: <pre>{{clickEvent | json}}</pre></p>
-</div>
-
-<div ng-controller="OneTimeBinding">
-    <button ng-click="clickMe($event)">Click me</button>
-    <p id="one-time-binding-example">One time binding: {{ ::name }}</p>
-    <p id="normal-binding-example">Normal binding: {{name}}</p>
-</div>
-
-  <hr>
-
-<div ng-controller="FormController">
-    <form name="form" novalidate class="css-form">
-        <label>Name:
-      <input type="text" ng-model="user.name" name="uName" required="" />
-    </label>
-    <br />
-    <div ng-show="form.$submitted || form.uName.$touched">
-      <div ng-show="form.uName.$error.required">Tell us your name.</div>
-    </div>
-
-    <label>E-mail:
-      <input type="email" ng-model="user.email" name="uEmail" required="" />
-    </label>
-    <br />
-    <div ng-show="form.$submitted || form.uEmail.$touched">
-      <span ng-show="form.uEmail.$error.required">Tell us your email.</span>
-      <span ng-show="form.uEmail.$error.email">This is not a valid email.</span>
-    </div>
-
-    Gender:
-    <label><input type="radio" ng-model="user.gender" value="male" />male</label>
-    <label><input type="radio" ng-model="user.gender" value="female" />female</label>
-    <br />
-    <label>
-    <input type="checkbox" ng-model="user.agree" name="userAgree" required="" />
-
-    I agree:
-    </label>
-    <input ng-show="user.agree" type="text" ng-model="user.agreeSign" required="" />
-    <br />
-    <div ng-show="form.$submitted || form.userAgree.$touched">
-      <div ng-show="!user.agree || !user.agreeSign">Please agree and sign.</div>
-    </div>
-
-    <input type="button" ng-click="reset(form)" value="Reset" />
-    <input type="submit" ng-click="update(user)" value="Save" />
-
-    </form>
-
-     <pre>user = {{user | json}}</pre>
-     <pre>master = {{master | json}}</pre>
-</div>
-
-  <hr>
-
-<div ng-controller="CustomForm">
-  <form>
-      <h2>Custom form (update on blur)</h2>
-    <label>Name:
-      <input type="text" ng-model="user.name" ng-model-options="{ updateOn: 'blur' }" /></label><br />
-    <label>
-    Other data:
-    <input type="text" ng-model="user.data" /></label><br />
-  </form>
-  <pre>username = "{{user.name}}"</pre>
-  <pre>userdata = "{{user.data}}"</pre>
-</div>
-
-  <hr>
-
-<div ng-controller="FormNonImmetiate">
-  <form>
-      <h2>Form update non immediate</h2>
-    <label>Name:
-    <input type="text" ng-model="user.name" ng-model-options="{ debounce: 250 }" /></label><br />
-  </form>
-  <pre>username = "{{user.name}}"</pre>
-</div>
-  <hr>
-
-
-<form name="form" class="css-form" novalidate>
-  <div>
-      <h2>Validator size and username-already-taken with directives</h2>
-    <label>
-    Size (integer 0 - 10):
-    <input type="number" ng-model="size" name="size"
-           min="0" max="10" integer />{{size}}</label><br />
-    <span ng-show="form.size.$error.integer">The value is not a valid integer!</span>
-    <span ng-show="form.size.$error.min || form.size.$error.max">
-      The value must be in range 0 to 10!</span>
-  </div>
-
-  <div>
-    <label>
-    Username:
-    <input type="text" ng-model="name" name="name" username />{{name}}</label><br />
-    <span ng-show="form.name.$pending.username">Checking if this name is available...</span>
-    <span ng-show="form.name.$error.username">This username is already taken!</span>
-</form>
-
-  <hr>
-
-
-
-<form name="form" class="css-form" novalidate>
-  <div>
-      <h2>Validate e-mail with directive</h2>
-    <label>
-      Overwritten Email:
-      <input type="email" ng-model="myEmail" overwrite-email name="overwrittenEmail" />
-    </label>
-    <span ng-show="form.overwrittenEmail.$error.email">This email format is invalid!</span><br>
-    Model: {{myEmail}}
-    </div>
-</form>
-
-  <hr>
-<h2>custom form controls (using ngModel)</h2>
-<div contentEditable="true" ng-model="content" title="Click to edit">Some</div>
-<pre>model = {{content}}</pre>
-  <hr>
-
-<div ng-controller="FilterCtrl">
-    <h2>Filter</h2>
-
-    <input type="text" ng-model="myString" />
-    <h3>
-      {{ myString | capitalize}}
-    </h3>
-</div>
-
-  <hr>
-
-<div ng-controller="FilterSearch">
-    <h2>Filter Search</h2>
-    <input type="text" ng-model="search">
-    <table class="table table-striped">
-        <thead>
-            <th>Name</th>
-            <th>Born</th>
-        </thead>
-        <tbody>
-            <tr ng-repeat="person in people | filter: search | orderBy:'name' | limitTo:5"">
-                <td>{{person.name}}</td>
-                <td>{{person.born}}</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-  <hr>
-<h2>Directive welcome  - Element</h2>
-<welcome hello>
-    <button>Click this button</button>
-</welcome>
-
-<h2>Directive welcome  - Advanced</h2>
-<div ng-controller="FunController as fun" entering="fun.start()" leaving="fun.end()">Hover over me for fun times. huehuehue</div>
-
-  <hr>
-<h2>Thinkster Directive</h2>
-<tabset>
-  <tab heading="Tab 1">
-    Lorem ipsum dolor sit amet, ut eam nullam utroque liberavisse, ea
-    graecis tractatos contentiones quo. Ipsum phaedrum scripserit sit id,
-    eu insolens indoctum vel, eos eu offendit delectus tincidunt. Eum
-    nostrum reprehendunt in, ullum nostrud legimus ei quo. Sed et elitr
-    corrumpit. Nibh maiestatis voluptatum has no, at est inermis epicuri,
-    omnis temporibus cu mei. Legere scriptorem voluptatibus et est, ea
-    noluisse deterruisset sea.
-  </tab>
-  <tab heading="tab 2">
-    Just another tab!
-  </tab>
-</tabset>
-
-
-<h2>Clock - Components and containers</h2>
-<clock timezone="MST"></clock>
-  <panel title="I'm a title">
-    <clock timezone="PST"></clock>
-  </panel>
-  <panel title="I'm a title">
-    <clock timezone="PST"></clock>
-    <clock timezone="PST"></clock>
-    <clock timezone="PST"></clock>
-    <clock timezone="PST"></clock>
-  </panel>
-
-<h2>Directive comunication</h2>
-<country>
-    <state>
-        <city></city>
-    </state>
-</country>
-
-  <div ng-controller="ChoreCtrl">
-    <h2>Understanding Isolate Scope</h2>
-    <kid done="logChore(chore)"></kid>
-  </div>
-
-<div ng-controller="drinkCtrl">
-    <h2> Isolate Scope "="</h2>
-    <input type="text" ng-model="ctrlFlavor"> <!-- Ctrl -->
-    <div drink flavor="ctrlFlavor"></div>     <!-- Dir -->
-</div>
-
-<div ng-controller="phoneCtrl">
-    <h2>Isolate Scope "&"</h2>
-    <div phone dial="callHome(message)"></div>
-</div>
-
-<div ng-controller="InvoiceCtrl">
-    <phone number="555-1234" network="network" make-call="leaveVoicemail(number, message)"></phone>
-    <phone number="867-5309" network="network" make-call="leaveVoicemail(number, message)"></phone>
-    <phone number="911" network="network" make-call="leaveVoicemail(number, message)"></phone>
-</div>
-<div>
-    <h2>angular.element</h2>
-    <dumb-password></dumb-password>
-</div>
-
-<div >
-    <h2>$index, $event, $log</h2>
-    <div class="btn btn-primary"
-            ng-repeat="item in 'abcdef'.split('')"
-            ng-click="$log.debug($event)">
-        {{$index + 1}}. {{item}}
-        {{ev.pageX}}
-    </div>
-
-</div>
+    <ng-view></ng-view>
 </body>
 </html>
